добавил фавиконки для всех типов устройств

--- a/src/scss/front.sass
+++ b/src/scss/front.sass
@@ -71,10 +71,11 @@
 
   &__info
     padding-top: 33px
-    padding-bottom: 43px
+    padding-bottom: 10px
     box-shadow: 0 0 7px rgba(102, 102, 102, 0.21)
     &-item
       display: block
+      margin-bottom: 33px
       $info-pd-left: 66px
       padding-left: $info-pd-left
       h4
@@ -203,7 +204,7 @@
 // Анонс
 .announcement
   padding-top: 30px
-  padding-bottom: 76px
+  padding-bottom: 46px
   background-color: #f3efe3
   $day-width: 95px
   &__title
@@ -215,6 +216,7 @@
   &__item
     display: flex
     flex-direction: row
+    margin-bottom: 30px
   &__date
     display: flex
     flex-direction: column
