сделал небольшие правки

--- a/src/scss/front.sass
+++ b/src/scss/front.sass
@@ -265,6 +265,7 @@
       padding-left: 12px
     &:hover
       color: $active-color
+      cursor: pointer
 
   &__quest
     display: block
@@ -276,6 +277,7 @@
     line-height: 1.2em
     &:hover
       color: #000
+      cursor: pointer
 
 // Список разделов
 .section-list
