--- a/src/scss/spritePNG.scss
+++ b/src/scss/spritePNG.scss
@@ -18,8 +18,8 @@ $building-width: 18px;
 $building-height: 28px;
 $building-total-width: 133px;
 $building-total-height: 106px;
-$building-image: '/img/spritePNG.png';
-$building: (115px, 0px, -115px, 0px, 18px, 28px, 133px, 106px, '/img/spritePNG.png', 'building', );
+$building-image: '../img/spritePNG.png';
+$building: (115px, 0px, -115px, 0px, 18px, 28px, 133px, 106px, '../img/spritePNG.png', 'building', );
 $calendar-name: 'calendar';
 $calendar-x: 0px;
 $calendar-y: 0px;
@@ -29,8 +29,8 @@ $calendar-width: 43px;
 $calendar-height: 48px;
 $calendar-total-width: 133px;
 $calendar-total-height: 106px;
-$calendar-image: '/img/spritePNG.png';
-$calendar: (0px, 0px, 0px, 0px, 43px, 48px, 133px, 106px, '/img/spritePNG.png', 'calendar', );
+$calendar-image: '../img/spritePNG.png';
+$calendar: (0px, 0px, 0px, 0px, 43px, 48px, 133px, 106px, '../img/spritePNG.png', 'calendar', );
 $coin-name: 'coin';
 $coin-x: 33px;
 $coin-y: 52px;
@@ -40,8 +40,8 @@ $coin-width: 30px;
 $coin-height: 28px;
 $coin-total-width: 133px;
 $coin-total-height: 106px;
-$coin-image: '/img/spritePNG.png';
-$coin: (33px, 52px, -33px, -52px, 30px, 28px, 133px, 106px, '/img/spritePNG.png', 'coin', );
+$coin-image: '../img/spritePNG.png';
+$coin: (33px, 52px, -33px, -52px, 30px, 28px, 133px, 106px, '../img/spritePNG.png', 'coin', );
 $display-name: 'display';
 $display-x: 47px;
 $display-y: 0px;
@@ -51,8 +51,8 @@ $display-width: 36px;
 $display-height: 32px;
 $display-total-width: 133px;
 $display-total-height: 106px;
-$display-image: '/img/spritePNG.png';
-$display: (47px, 0px, -47px, 0px, 36px, 32px, 133px, 106px, '/img/spritePNG.png', 'display', );
+$display-image: '../img/spritePNG.png';
+$display: (47px, 0px, -47px, 0px, 36px, 32px, 133px, 106px, '../img/spritePNG.png', 'display', );
 $key-name: 'key';
 $key-x: 115px;
 $key-y: 32px;
@@ -62,8 +62,8 @@ $key-width: 16px;
 $key-height: 18px;
 $key-total-width: 133px;
 $key-total-height: 106px;
-$key-image: '/img/spritePNG.png';
-$key: (115px, 32px, -115px, -32px, 16px, 18px, 133px, 106px, '/img/spritePNG.png', 'key', );
+$key-image: '../img/spritePNG.png';
+$key: (115px, 32px, -115px, -32px, 16px, 18px, 133px, 106px, '../img/spritePNG.png', 'key', );
 $licence-name: 'licence';
 $licence-x: 87px;
 $licence-y: 0px;
@@ -73,8 +73,8 @@ $licence-width: 24px;
 $licence-height: 32px;
 $licence-total-width: 133px;
 $licence-total-height: 106px;
-$licence-image: '/img/spritePNG.png';
-$licence: (87px, 0px, -87px, 0px, 24px, 32px, 133px, 106px, '/img/spritePNG.png', 'licence', );
+$licence-image: '../img/spritePNG.png';
+$licence: (87px, 0px, -87px, 0px, 24px, 32px, 133px, 106px, '../img/spritePNG.png', 'licence', );
 $medal-name: 'medal';
 $medal-x: 87px;
 $medal-y: 36px;
@@ -84,8 +84,8 @@ $medal-width: 24px;
 $medal-height: 32px;
 $medal-total-width: 133px;
 $medal-total-height: 106px;
-$medal-image: '/img/spritePNG.png';
-$medal: (87px, 36px, -87px, -36px, 24px, 32px, 133px, 106px, '/img/spritePNG.png', 'medal', );
+$medal-image: '../img/spritePNG.png';
+$medal: (87px, 36px, -87px, -36px, 24px, 32px, 133px, 106px, '../img/spritePNG.png', 'medal', );
 $people-name: 'people';
 $people-x: 0px;
 $people-y: 85px;
@@ -95,8 +95,8 @@ $people-width: 32px;
 $people-height: 21px;
 $people-total-width: 133px;
 $people-total-height: 106px;
-$people-image: '/img/spritePNG.png';
-$people: (0px, 85px, 0px, -85px, 32px, 21px, 133px, 106px, '/img/spritePNG.png', 'people', );
+$people-image: '../img/spritePNG.png';
+$people: (0px, 85px, 0px, -85px, 32px, 21px, 133px, 106px, '../img/spritePNG.png', 'people', );
 $percent-name: 'percent';
 $percent-x: 0px;
 $percent-y: 52px;
@@ -106,13 +106,13 @@ $percent-width: 29px;
 $percent-height: 29px;
 $percent-total-width: 133px;
 $percent-total-height: 106px;
-$percent-image: '/img/spritePNG.png';
-$percent: (0px, 52px, 0px, -52px, 29px, 29px, 133px, 106px, '/img/spritePNG.png', 'percent', );
+$percent-image: '../img/spritePNG.png';
+$percent: (0px, 52px, 0px, -52px, 29px, 29px, 133px, 106px, '../img/spritePNG.png', 'percent', );
 $spritesheet-width: 133px;
 $spritesheet-height: 106px;
-$spritesheet-image: '/img/spritePNG.png';
+$spritesheet-image: '../img/spritePNG.png';
 $spritesheet-sprites: ($building, $calendar, $coin, $display, $key, $licence, $medal, $people, $percent, );
-$spritesheet: (133px, 106px, '/img/spritePNG.png', $spritesheet-sprites, );
+$spritesheet: (133px, 106px, '../img/spritePNG.png', $spritesheet-sprites, );
 
 // The provided mixins are intended to be used with the array-like variables
 //
