--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -241,8 +241,8 @@ block content
           img(src="/img/inst_01.png", alt="")
         a.article-prev__tag(href="#") Инструкции
         a.article-prev__link(href="#")
-          h3.article-prev__title Яндекс проведет конференцию о технологиях в математическом образовании
-        p.article-prev__text Как повысить качество математического образования с помощью исследований? 18–21 марта 2019 года Яндекс и Международное общество исследователей в области психологии математического образования (PME) проведут масштабную конференцию «Психология и технологии в математическом образовании».
+          h3.article-prev__title Запустилась бесплатная онлайн-платформа с курсами повышения квалификации для учителей
+        p.article-prev__text Минпросвещения и Рособрсоюз запустили Национальную электронную платформу педагогического образования (НЭППО), на которой учителя смогут пройти курсы повышения квалификации и научиться разрабатывать свои онлайн-курсы.
         +statistic
 
       article.article-prev.col-md-4
@@ -250,8 +250,8 @@ block content
           img(src="/img/inst_02.png", alt="")
         a.article-prev__tag(href="#") Инструкции
         a.article-prev__link(href="#")
-          h3.article-prev__title Яндекс проведет конференцию о технологиях в математическом образовании
-        p.article-prev__text Как повысить качество математического образования с помощью исследований? 18–21 марта 2019 года Яндекс и Международное общество исследователей в области психологии математического образования (PME) проведут масштабную конференцию «Психология и технологии в математическом образовании».
+          h3.article-prev__title Открыт прием заявок на конкурс практик внутриклассного оценивания
+        p.article-prev__text До 15 апреля 2019 можно подать заявку на конкурс «Практики внутриклассного оценивания-2019». Победители получат денежные гранты и возможность выступить с докладом на международном симпозиуме в Болгарии.
         +statistic
 
   // Список разделов
