--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -7,8 +7,8 @@ block meta
 block content
   // main banner
   section.main-banner
-    .container-fluid.main-banner__slide
-      .container.main-banner__first-row
+    .main-banner__first-row
+      .container
         .row
           h3.col-lg-12.main-banner__title Эксперт в образовании
           p.col-lg-8.col-md-12.main-banner__text Дистанционные курсы повышения квалификации и&#160;программы переподготовки для работников образования
@@ -21,18 +21,17 @@ block content
             .main-banner__stat-item.main-banner__stat-item--building С #[span 2013] года с вами
           .col-lg-3.col-md-6.col-sm-12
             .main-banner__stat-item.main-banner__stat-item--percent Программа лояльности
-    .container-fluid.main-banner__info
-      .container
-        .row
-          a.col-md-4.col-sm-12.main-banner__info-item.main-banner__info-item--licence(href="#")
-            h4 Государственная лицензия
-            p на осуществление образовательной деятельности № 0681 от 25.09.-4013
-          a.col-md-4.col-sm-12.main-banner__info-item.main-banner__info-item--official(href="#")
-            h4 Официальные сведения
-            p Сведения об образовательной организации. Результаты проверки Рособрнадзора
-          a.col-md-4.col-sm-12.main-banner__info-item.main-banner__info-item--free(href="#")
-            h4 Бесплатное обучение
-            p Достойный выбор бесплатных курсов с выдачей сертификата участника
+    .container.main-banner__info
+      .row
+        a.col-md-4.col-sm-12.main-banner__info-item.main-banner__info-item--licence(href="#")
+          h4 Государственная лицензия
+          p на осуществление образовательной деятельности № 0681 от 25.09.-4013
+        a.col-md-4.col-sm-12.main-banner__info-item.main-banner__info-item--official(href="#")
+          h4 Официальные сведения
+          p Сведения об образовательной организации. Результаты проверки Рособрнадзора
+        a.col-md-4.col-sm-12.main-banner__info-item.main-banner__info-item--free(href="#")
+          h4 Бесплатное обучение
+          p Достойный выбор бесплатных курсов с выдачей сертификата участника
 
   // Статьи. Верхний блок
   section.article-prevs-block.container
@@ -46,15 +45,19 @@ block content
         +statistic
 
       // Форма подписки
-      .col-sm-12.col-lg-4
-        form(action="", method="", class="subscribe")
-          p.subscribe-form__text #[span Мы Вам понравились?] Подпишитесь
-          input.subscribe-form__input(type="text", name="lastname")
-          input.subscribe-form__input(type="text", name="firstname")
-          input.subscribe-form__input(type="text", name="")
-          input.subscribe-form__input(type="email", name="email")
-          input.subscribe-form__input(type="checkbox")
-          input.subscribe-form__subscribe(type="submit", value="Подписаться")
+      .col-sm-12.col-lg-4.col-sm-8
+        form.subscribe-form(action="#", method="POST")
+          fieldset.form-group
+            legend.subscribe-form__text #[span Мы Вам понравились?] Подпишитесь
+            label.sr-only(for="lastname") Фамилия
+            input.form-control.subscribe-form__input(type="text", name="lastname", placeholder="Фамилия")
+            label.sr-only(for="firstname") Имя
+            input.form-control.subscribe-form__input(type="text", name="firstname", placeholder="Имя")
+            input.form-control.subscribe-form__input(type="text", name="")
+            label.sr-only(for="firstname") Имя
+            input.form-control.subscribe-form__input(type="email", name="email")
+            input.subscribe-form__input(type="checkbox")
+            input.btn.subscribe-form__subscribe(type="submit", value="Подписаться")
     .row
       article.article-prev.col-md-4
         .article-prev__img-wrap
@@ -84,26 +87,26 @@ block content
         +statistic
 
   // Анонс мероприятий
-  section.announcement.container-fluid
-    .container
-      .row
-        h2.col-md-12.announcement__title Анонс мероприятий
-      .row
-        .announcement__item.col-md-4
-          .announcement__date
-            .announcement__day 25
-            .announcement__month февраля
-          p.announcement__text Четвёртая встреча «Клуба руководителей»
-        .announcement__item.col-md-4
-          .announcement__date
-            .announcement__day 01
-            .announcement__month сентября
-          p.announcement__text Седьмой поток на бесплатных дистанционных курсах для работников образования
-        .announcement__item.col-md-4
-          .announcement__date
-            .announcement__day 01
-            .announcement__month июля
-          p.announcement__text Старт продаж программы «Государственный контроль в образовательном учреждении»
+  //- section.announcement.container-fluid
+  //-   .container
+  //-     .row
+  //-       h2.col-md-12.announcement__title Анонс мероприятий
+  //-     .row
+  //-       .announcement__item.col-md-4
+  //-         .announcement__date
+  //-           .announcement__day 25
+  //-           .announcement__month февраля
+  //-         p.announcement__text Четвёртая встреча «Клуба руководителей»
+  //-       .announcement__item.col-md-4
+  //-         .announcement__date
+  //-           .announcement__day 01
+  //-           .announcement__month сентября
+  //-         p.announcement__text Седьмой поток на бесплатных дистанционных курсах для работников образования
+  //-       .announcement__item.col-md-4
+  //-         .announcement__date
+  //-           .announcement__day 01
+  //-           .announcement__month июля
+  //-         p.announcement__text Старт продаж программы «Государственный контроль в образовательном учреждении»
 
   // Видео-интервью
   section.article-prev.article-prev--video-interview.container
