исправил глюк с горизонтальной прокруткой

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -21,17 +21,18 @@ block content
             .main-banner__stat-item.main-banner__stat-item--building С #[span 2013] года с вами
           .col-lg-3.col-md-6.col-sm-12
             .main-banner__stat-item.main-banner__stat-item--percent Программа лояльности
-    .container.main-banner__info
-      .row
-        a.col-md-4.col-sm-12.main-banner__info-item.main-banner__info-item--licence(href="#")
-          h4 Государственная лицензия
-          p на осуществление образовательной деятельности № 0681 от 25.09.-4013
-        a.col-md-4.col-sm-12.main-banner__info-item.main-banner__info-item--official(href="#")
-          h4 Официальные сведения
-          p Сведения об образовательной организации. Результаты проверки Рособрнадзора
-        a.col-md-4.col-sm-12.main-banner__info-item.main-banner__info-item--free(href="#")
-          h4 Бесплатное обучение
-          p Достойный выбор бесплатных курсов с выдачей сертификата участника
+    .main-banner__info
+      .container
+        .row
+          a.col-md-4.col-sm-12.main-banner__info-item.main-banner__info-item--licence(href="#")
+            h4 Государственная лицензия
+            p на осуществление образовательной деятельности № 0681 от 25.09.-4013
+          a.col-md-4.col-sm-12.main-banner__info-item.main-banner__info-item--official(href="#")
+            h4 Официальные сведения
+            p Сведения об образовательной организации. Результаты проверки Рособрнадзора
+          a.col-md-4.col-sm-12.main-banner__info-item.main-banner__info-item--free(href="#")
+            h4 Бесплатное обучение
+            p Достойный выбор бесплатных курсов с выдачей сертификата участника
 
   // Статьи. Верхний блок
   section.article-prevs-block.container
@@ -87,26 +88,26 @@ block content
         +statistic
 
   // Анонс мероприятий
-  //- section.announcement.container-fluid
-  //-   .container
-  //-     .row
-  //-       h2.col-md-12.announcement__title Анонс мероприятий
-  //-     .row
-  //-       .announcement__item.col-md-4
-  //-         .announcement__date
-  //-           .announcement__day 25
-  //-           .announcement__month февраля
-  //-         p.announcement__text Четвёртая встреча «Клуба руководителей»
-  //-       .announcement__item.col-md-4
-  //-         .announcement__date
-  //-           .announcement__day 01
-  //-           .announcement__month сентября
-  //-         p.announcement__text Седьмой поток на бесплатных дистанционных курсах для работников образования
-  //-       .announcement__item.col-md-4
-  //-         .announcement__date
-  //-           .announcement__day 01
-  //-           .announcement__month июля
-  //-         p.announcement__text Старт продаж программы «Государственный контроль в образовательном учреждении»
+  section.announcement
+    .container
+      .row
+        h2.col-md-12.announcement__title Анонс мероприятий
+      .row
+        .announcement__item.col-md-4
+          .announcement__date
+            .announcement__day 25
+            .announcement__month февраля
+          p.announcement__text Четвёртая встреча «Клуба руководителей»
+        .announcement__item.col-md-4
+          .announcement__date
+            .announcement__day 01
+            .announcement__month сентября
+          p.announcement__text Седьмой поток на бесплатных дистанционных курсах для работников образования
+        .announcement__item.col-md-4
+          .announcement__date
+            .announcement__day 01
+            .announcement__month июля
+          p.announcement__text Старт продаж программы «Государственный контроль в образовательном учреждении»
 
   // Видео-интервью
   section.article-prev.article-prev--video-interview.container
