--- a/src/scss/front.sass
+++ b/src/scss/front.sass
@@ -5,7 +5,7 @@
 // Главный баннер
 .main-banner
   margin-bottom: 70px
-  &__slide
+  &__first-row
     padding-top: 41px
     padding-bottom: 65px
     background: linear-gradient(60deg, #1422aa, #a3d3e5)
@@ -70,6 +70,7 @@
         +topcalc(29px, $hb)
 
   &__info
+    width: 100%
     padding-top: 33px
     padding-bottom: 10px
     box-shadow: 0 0 7px rgba(102, 102, 102, 0.21)
@@ -203,6 +204,7 @@
 
 // Анонс
 .announcement
+  width: 100%
   padding-top: 30px
   padding-bottom: 46px
   background-color: #f3efe3
