--- a/src/scss/front.sass
+++ b/src/scss/front.sass
@@ -107,6 +107,33 @@
           +leftcalc($medal-width, $info-pd-left)
           top: 0
 
+// форма подписки
+.subscribe
+  padding: 24px
+  border: 2px solid $accent
+
+  &__legend
+    margin: 0
+    padding: 0 0 24px 0
+    border: none
+    font-size: 1em
+    color: #000
+    span
+      +ff-arial-bold
+      color: $accent
+      font-style: italic
+  &__input
+    margin-bottom: 11px
+    border: 1px solid #bcbcbc
+    color: $textgray
+    background-color: #fff
+  &__check-label
+    margin: 0 0 0 10px
+    padding: 0
+    +ff-arial
+  &__btn
+    margin: 0
+
 // карточки-превью статей
 .article-prev
   position: relative
