объединил всё в master

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -36,13 +36,14 @@ block content
 
   // Статьи. Верхний блок
   section.article-prevs-block.container
-    .row
-      article.col-xs-12.col-sm-6.col-md-8.article-prev.aritcles__prev--main
-        .article-prev__img-wrap
-          img(src="/img/article_photo.png", alt="")
+    .row.article-prevs-block__1st-line
+      article.col-xs-12.col-sm-6.col-md-8.article-prev.aritcle__prev--main
+        .article-prev__img-wrap.article-prev__img-wrap--main
+          img.img-fluid(src="/img/article_photo.png", alt="")
+        a.article-prev__tag.article-prev__tag--main(href="#") Новости
         a.article-prev__link(href="#")
-          h3.article-prev__title Яндекс.Учебники и РАО создадут хартию о цифровой образовательной среде
-        p.article-prev__text Яндекс.Учебник и Российская академия образования совместно с учителями, родителями и экспертами разработают хартию о цифровой образовательной среде школы.
+          h3.article-prev__title.article-prev__title--main Яндекс.Учебники и РАО создадут хартию о цифровой образовательной среде
+        p.article-prev__text.article-prev__text--main Яндекс.Учебник и Российская академия образования совместно с учителями, родителями и экспертами разработают хартию о цифровой образовательной среде школы.
         +statistic
 
       // Форма подписки
