--- a/src/scss/front.sass
+++ b/src/scss/front.sass
@@ -109,6 +109,7 @@
 
 // форма подписки
 .subscribe
+  margin-bottom: 30px
   padding: 24px
   border: 2px solid $accent
 
@@ -134,19 +135,49 @@
   &__btn
     margin: 0
 
+//
+.article-prevs-block
+  &__1st-line
+    display: flex
+    align-content: stretch
+    justify-content: stretch
+
 // карточки-превью статей
 .article-prev
+  margin-bottom: 30px
   position: relative
+  align-self: stretch
   // margin-top: 70px
+  &--main
+    overflow: hidden
   &__img-wrap
     box-sizing: border-box
     margin-bottom: 30px
     height: 220px
     overflow: hidden
     img
-      width: 100%
-      height: auto
       object-fit: cover
+  &__img-wrap--main
+    position: absolute
+    z-index: -5
+    // padding: 0 $pad
+    width: calc(100% - #{$pad})
+    height: 100%
+    top: 0
+    left: $pad
+    &::before
+      content: ''
+      display: block
+      position: absolute
+      z-index: 0
+      left: 0
+      top: 0
+      height: 0
+      width: calc(100% - #{$pad})
+      height: 100%
+      background: linear-gradient(0deg, rgba(255, 255, 255, 0), $accent)
+    // img
+    //   object-fit: cover
   &__tag
     display: block
     text-decoration: none
@@ -154,6 +185,8 @@
     color: $lightgray
     font-size: 0.875em
     line-height: 1.285em
+    &--main
+      display: none
     &:hover
       color: $lightgray
     &:visited
@@ -167,11 +200,16 @@
     color: $headgray
     font-size: 1.125em
     line-height: 1.125em
+    &--main
+      color: #fff
+      z-index: 5
   &__text
     +ff-arial
     color: $textgray
     font-size: 0.875em
     line-height: 1.714em
+    &--main
+      color: #fff
   &__statistic
     border: none
     background: none
@@ -179,13 +217,6 @@
     font-size: 0.75em
     color: $lightgray
 
-  // 1-я карточка
-  &--main article-prev
-    &__img-wrap
-      position: absolute
-      height: 100%
-      top: 0
-      left: 0
 
 // Заголовки разделов
 .section-head
