поправил наличие/отсутствие объектов при переходе с мобилки на планшет

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -12,7 +12,7 @@ block content
         .row
           h3.col-lg-12.main-banner__title Эксперт в образовании
           p.col-lg-8.col-md-12.main-banner__text Дистанционные курсы повышения квалификации и&#160;программы переподготовки для работников образования
-        .row.main-banner__statistic
+        .row.main-banner__statistic.hidden-xs
           .col-lg-3.col-md-6.col-sm-12
             .main-banner__stat-item.main-banner__stat-item--people #[span 15 806] слушателей
           .col-lg-3.col-md-6.col-sm-12
@@ -65,7 +65,7 @@ block content
           button.btn.btn-primary.subscribe__btn(type="submit") Подписаться
     .row
       article.article-prev.col-md-4
-        .article-prev__img-wrap
+        a.article-prev__img-wrap
           img(src="/img/prev_01.png", alt="")
         a.article-prev__tag(href="#") Новости
         a.article-prev__link(href="#")
