добавил линки в заголовки разделов и скрыл "Все статьи раздела >>" на мобилках

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -118,8 +118,9 @@ block content
     .row
       .col-md-12.section-head
         hr.section-head__line
-        h2.section-head__title Видео-интервью
-        a.section-head__all-articles-link(href="#") Все статьи раздела >>
+        a.section-head__all-articles-link.section-head__all-articles-link--title(href="#")
+          h2.section-head__title Видео-интервью
+        a.section-head__all-articles-link.hidden-xs(href="#") Все статьи раздела >>
 
     .row
       article.article-prev.col-md-4
@@ -154,8 +155,9 @@ block content
     .row
       .col-md-12.section-head
         hr.section-head__line
-        h2.section-head__title Новости
-        a.section-head__all-articles-link(href="#") Все статьи раздела >>
+        a.section-head__all-articles-link.section-head__all-articles-link--title(href="#")
+          h2.section-head__title Новости
+        a.section-head__all-articles-link.hidden-xs(href="#") Все статьи раздела >>
 
     .row
       article.article-prev.col-md-4
@@ -190,8 +192,9 @@ block content
     .row
       .col-md-12.section-head
         .section-head__line
-        h2.section-head__title Научные статьи
-        a.section-head__all-articles-link(href="#") Все статьи раздела >>
+        a.section-head__all-articles-link.section-head__all-articles-link--title(href="#")
+          h2.section-head__title Научные статьи
+        a.section-head__all-articles-link.hidden-xs(href="#") Все статьи раздела >>
 
     .row
       article.article-prev.col-md-4
@@ -239,9 +242,10 @@ block content
   section.article-prev.article-prev--science.container
     .row
       .col-md-12.section-head
-        .section-head__line
-        h2.section-head__title Инструкции
-        a.section-head__all-articles-link(href="#") Все статьи раздела >>
+        hr.section-head__line
+        a.section-head__all-articles-link.section-head__all-articles-link--title(href="#")
+          h2.section-head__title Инструкции
+        a.section-head__all-articles-link.hidden-xs(href="#") Все статьи раздела >>
 
     .row
       article.article-prev.col-md-4
