--- a/src/scss/front.sass
+++ b/src/scss/front.sass
@@ -248,6 +248,8 @@
     font-size: 1.125em
     line-height: 1.33em
     color: $accent
+    &:hover
+        text-decoration: underline
   &__all-articles-link
     margin: 0
     padding: 0 0 0 15px
@@ -257,6 +259,8 @@
     font-size: 1em
     line-height: 1.5em
     color: $accent
+    &--title
+      padding: 0
     &:hover
       color: $accent
 
