добавил ссылки в анонсы

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -101,17 +101,17 @@ block content
           .announcement__date
             .announcement__day 25
             .announcement__month февраля
-          p.announcement__text Четвёртая встреча «Клуба руководителей»
-        .announcement__item.col-md-4
+          a.announcement__text(href="#") Четвёртая встреча «Клуба руководителей»
+        .announcement__item.col-md-4(href="#")
           .announcement__date
             .announcement__day 01
             .announcement__month сентября
-          p.announcement__text Седьмой поток на бесплатных дистанционных курсах для работников образования
-        .announcement__item.col-md-4
+          a.announcement__text(href="#") Седьмой поток на бесплатных дистанционных курсах для работников образования
+        .announcement__item.col-md-4(href="#")
           .announcement__date
             .announcement__day 01
             .announcement__month июля
-          p.announcement__text Старт продаж программы «Государственный контроль в образовательном учреждении»
+          a.announcement__text(href="#") Старт продаж программы «Государственный контроль в образовательном учреждении»
 
   // Видео-интервью
   section.article-prev.article-prev--video-interview.container
