--- a/src/scss/front.sass
+++ b/src/scss/front.sass
@@ -308,10 +308,13 @@
     text-align: center
     width: $day-width
   &__text
+    display: block
     +ff-arial-bold
     color: $headgray
     font-size: 1em
     line-height: 1.5em
+    &:hover
+      color: $headgray
 
 // FAQ
 .faq
