--- a/src/scss/_fonts.sass
+++ b/src/scss/_fonts.sass
@@ -4,8 +4,10 @@
 // +font-face("RobotoBlack", "/fonts/RobotoBlack/RobotoBlack")
 +font-face("Roboto", "/fonts/roboto-regular")
 +font-face("RobotoBold", "/fonts/roboto-bold")
-+font-face("Font Awesome 5 Free", "/fonts/fa-regular-400")
-+font-face("Glyphicons Halflings", "/fonts/glyphicons-halflings-regular")
++font-face("Font Awesome 5 Free", "../webfonts/fa-regular-400")
++font-face("Font Awesome 5 Solid", "../webfonts/fa-solid-400")
++font-face("Font Awesome 5 Brand", "../webfonts/fa-brands-400")
++font-face("Glyphicons Halflings", "../fonts/glyphicons-halflings-regular")
 
 @mixin ff-roboto()
   font-family: Roboto, Arial, sans-serif
