--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -37,6 +37,7 @@ block content
   // Статьи. Верхний блок
   section.article-prevs-block.container
     .row.article-prevs-block__1st-line
+
       article.col-sm-12.col-md-8.article-prev.aritcle__prev
         .article-prev__img-wrap.article-prev__img-wrap--main
           img.img-fluid(src="/img/article_photo.png", alt="")
@@ -64,32 +65,24 @@ block content
               label.subscribe__check-label(for="freqcheck") Не более 1 письма в неделю
           button.btn.btn-primary.subscribe__btn(type="submit") #[span.fas.fa-envelope.fa-lg] Подписаться
     .row
-      article.article-prev.col-md-4
-        a.article-prev__img-wrap
-          img(src="/img/prev_01.png", alt="")
-        a.article-prev__tag(href="#") Новости
-        a.article-prev__link(href="#")
-          h3.article-prev__title Главные новости цифрового образования
-        p.article-prev__text В еженедельном дайджесте мы рассказываем о самом важном, что случилось с цифровым образованием в России и в мире за последнюю неделю.
-        +statistic
-
-      article.article-prev.col-md-4
-        .article-prev__img-wrap
-          img(src="/img/prev_02.png", alt="")
-        a.article-prev__tag(href="#") Образование
-        a.article-prev__link(href="#")
-          h3.article-prev__title Образовательное пространство России&#160;— это 70 лет консерватизма
-        p.article-prev__text Союз дизайнеров России, Московский Архитектурный институт и компания «Сетевые исследования» объявили конкурс проектов по дизайну образовательного пространства российских университетов.
-        +statistic
-
-      article.article-prev.col-md-4
-        .article-prev__img-wrap
-          img(src="/img/prev_03.png", alt="")
-        a.article-prev__tag(href="#") Инновации
-        a.article-prev__link(href="#")
-          h3.article-prev__title Открыт прием заявок на конкурс иноваций в образовании
-        p.article-prev__text С 1 апреля по 19 мая EdTech-стартапы могут подать заявки на участие в Конкурсе инноваций в образовании (КИвО). Прошедших первичный отбор ждет летний акселератор и открытый финал в Москве.
-        +statistic
+      +article__prev({
+        title: 'Главные новости цифрового образования',
+        img: "/img/prev_01.png",
+        tag: "Новости",
+        text: 'В еженедельном дайджесте мы рассказываем о самом важном, что случилось с цифровым образованием в России и в мире за последнюю неделю.'
+        })
+      +article__prev({
+        title: `Образовательное пространство России&#160;— это 70 лет консерватизма`,
+        img: "/img/prev_02.png",
+        tag: "Образование",
+        text: "Союз дизайнеров России, Московский Архитектурный институт и компания «Сетевые исследования» объявили конкурс проектов по дизайну образовательного пространства российских университетов."
+        })
+      +article__prev({
+        title: "Открыт прием заявок на конкурс иноваций в образовании",
+        img: "/img/prev_03.png",
+        tag: "Инновации",
+        text: "С 1 апреля по 19 мая EdTech-стартапы могут подать заявки на участие в Конкурсе инноваций в образовании (КИвО). Прошедших первичный отбор ждет летний акселератор и открытый финал в Москве."
+        })
 
   // Анонс мероприятий
   section.announcement
@@ -123,32 +116,22 @@ block content
         a.section-head__all-articles-link.hidden-xs(href="#") Все статьи раздела >>
 
     .row
-      article.article-prev.col-md-4
-        .article-prev__img-wrap
-          img(src="/img/vid_01.png", alt="")
-        a.article-prev__tag(href="#") Видео-интервью
-        a.article-prev__link(href="#")
-          h3.article-prev__title 5 правил личностного роста
-        p.article-prev__text
-        +statistic
+      +article__prev({
+        title: "5 правил личностного роста",
+        img: "/img/vid_01.png",
+        tag: "Видео-интервью",
+        })
 
-      article.article-prev.col-md-4
-        .article-prev__img-wrap
-          img(src="/img/vid_02.png", alt="")
-        a.article-prev__tag(href="#") Видео-интервью
-        a.article-prev__link(href="#")
-          h3.article-prev__title Первый урок. Как подготовиться и не волноваться
-        p.article-prev__text
-        +statistic
-
-      article.article-prev.col-md-4
-        .article-prev__img-wrap
-          img(src="/img/vid_03.png", alt="")
-        a.article-prev__tag(href="#") Видео-интервью
-        a.article-prev__link(href="#")
-          h3.article-prev__title Мотивационные приема поддержки молодых специалистов в школе
-        p.article-prev__text
-        +statistic
+      +article__prev({
+        title: "Первый урок. Как подготовиться и не волноваться",
+        img: "/img/vid_02.png",
+        tag: "Видео-интервью",
+        })
+      +article__prev({
+        title: "Мотивационные приема поддержки молодых специалистов в школе",
+        img: "/img/vid_03.png",
+        tag: "Видео-интервью",
+        })
 
   // Новости
   section.article-prev.article-prev--news.container
@@ -160,32 +143,24 @@ block content
         a.section-head__all-articles-link.hidden-xs(href="#") Все статьи раздела >>
 
     .row
-      article.article-prev.col-md-4
-        .article-prev__img-wrap
-          img(src="/img/news_01.png", alt="")
-        a.article-prev__tag(href="#") Новости
-        a.article-prev__link(href="#")
-          h3.article-prev__title Яндекс.Учебники и РАО создадут хартию о цифровой образовательной среде
-        p.article-prev__text Яндекс.Учебник и Российская академия образования совместно с учителями, родителями и экспертами разработают хартию о цифровой образовательной среде школы.
-        +statistic
-
-      article.article-prev.col-md-4
-        .article-prev__img-wrap
-          img(src="/img/news_02.png", alt="")
-        a.article-prev__tag(href="#") Новости
-        a.article-prev__link(href="#")
-          h3.article-prev__title Главные новости цифрового образовании
-        p.article-prev__text В еженедельном дайджесте мы рассказываем о самом важном, что случилось с цифровым образованием в России и в мире за последнюю неделю.
-        +statistic
-
-      article.article-prev.col-md-4
-        .article-prev__img-wrap
-          img(src="/img/news_03.png", alt="")
-        a.article-prev__tag(href="#") Новости
-        a.article-prev__link(href="#")
-          h3.article-prev__title 10 тезисов книги «Другая школа»
-        p.article-prev__text Современная школа больше не работает — с этих слов начинается книга Александра Мурашева «Другая школа».
-        +statistic
+      +article__prev({
+        title: "Яндекс.Учебники и РАО создадут хартию о цифровой образовательной среде",
+        img: "/img/news_01.png",
+        tag: "Новости",
+        text: "Яндекс.Учебник и Российская академия образования совместно с учителями, родителями и экспертами разработают хартию о цифровой образовательной среде школы."
+        })
+      +article__prev({
+        title: "Главные новости цифрового образовании",
+        img: "/img/news_02.png",
+        tag: "Новости",
+        text: "В еженедельном дайджесте мы рассказываем о самом важном, что случилось с цифровым образованием в России и в мире за последнюю неделю."
+        })
+      +article__prev({
+        title: "10 тезисов книги «Другая школа»",
+        img: "/img/news_03.png",
+        tag: "Новости",
+        text: "Современная школа больше не работает — с этих слов начинается книга Александра Мурашева «Другая школа»."
+        })
 
   // Научные статьи
   section.article-prev.article-prev--science.container
@@ -197,32 +172,24 @@ block content
         a.section-head__all-articles-link.hidden-xs(href="#") Все статьи раздела >>
 
     .row
-      article.article-prev.col-md-4
-        .article-prev__img-wrap
-          img(src="/img/sci_01.png", alt="")
-        a.article-prev__tag(href="#") ИКТ
-        a.article-prev__link(href="#")
-          h3.article-prev__title Киберленинка выложит в открытый доступ 40 тысяч статей из журналов РАН
-        p.article-prev__text Онлайн-библиотека научной литературы КиберЛенинка заключила договор с Институтом научной информации по общественным наукам РАН. В течение двух месяцев ИНИОН разместит свои журналы в открытом доступе.
-        +statistic
-
-      article.article-prev.col-md-4
-        .article-prev__img-wrap
-          img(src="/img/sci_02.png", alt="")
-        a.article-prev__tag(href="#") Педагогика
-        a.article-prev__link(href="#")
-          h3.article-prev__title Минпросвещения утвердило новую концепцию преподавания технологии
-        p.article-prev__text Если верить новой концепции преподавания уроков технологии, шитье фартуков и сборка табуретов останутся в прошлом.
-        +statistic
-
-      article.article-prev.col-md-4
-        .article-prev__img-wrap
-          img(src="/img/sci_03.png", alt="")
-        a.article-prev__tag(href="#") Образование
-        a.article-prev__link(href="#")
-          h3.article-prev__title Яндекс проведет конференцию о технологиях в математическом образовании
-        p.article-prev__text Как повысить качество математического образования с помощью исследований? 18–21 марта 2019 года Яндекс и Международное общество исследователей в области психологии математического образования (PME) проведут масштабную конференцию «Психология и технологии в математическом образовании».
-        +statistic
+      +article__prev({
+        title: "Киберленинка выложит в открытый доступ 40 тысяч статей из журналов РАН",
+        img: "/img/sci_01.png",
+        tag: "ИКТ",
+        text: "Онлайн-библиотека научной литературы КиберЛенинка заключила договор с Институтом научной информации по общественным наукам РАН. В течение двух месяцев ИНИОН разместит свои журналы в открытом доступе."
+        })
+      +article__prev({
+        title: "Минпросвещения утвердило новую концепцию преподавания технологии",
+        img: "/img/sci_02.png",
+        tag: "Педагогика",
+        text: "Если верить новой концепции преподавания уроков технологии, шитье фартуков и сборка табуретов останутся в прошлом."
+        })
+      +article__prev({
+        title: "Яндекс проведет конференцию о технологиях в математическом образовании",
+        img: "/img/sci_03.png",
+        tag: "Образование",
+        text: "Как повысить качество математического образования с помощью исследований? 18–21 марта 2019 года Яндекс и Международное общество исследователей в области психологии математического образования (PME) проведут масштабную конференцию «Психология и технологии в математическом образовании»."
+        })
 
   // FAQ
   section.faq.container
@@ -248,23 +215,18 @@ block content
         a.section-head__all-articles-link.hidden-xs(href="#") Все статьи раздела >>
 
     .row
-      article.article-prev.col-md-4
-        .article-prev__img-wrap
-          img(src="/img/inst_01.png", alt="")
-        a.article-prev__tag(href="#") Инструкции
-        a.article-prev__link(href="#")
-          h3.article-prev__title Запустилась бесплатная онлайн-платформа с курсами повышения квалификации для учителей
-        p.article-prev__text Минпросвещения и Рособрсоюз запустили Национальную электронную платформу педагогического образования (НЭППО), на которой учителя смогут пройти курсы повышения квалификации и научиться разрабатывать свои онлайн-курсы.
-        +statistic
-
-      article.article-prev.col-md-4
-        .article-prev__img-wrap
-          img(src="/img/inst_02.png", alt="")
-        a.article-prev__tag(href="#") Инструкции
-        a.article-prev__link(href="#")
-          h3.article-prev__title Открыт прием заявок на конкурс практик внутриклассного оценивания
-        p.article-prev__text До 15 апреля 2019 можно подать заявку на конкурс «Практики внутриклассного оценивания-2019». Победители получат денежные гранты и возможность выступить с докладом на международном симпозиуме в Болгарии.
-        +statistic
+      +article__prev({
+        title: "Запустилась бесплатная онлайн-платформа с курсами повышения квалификации для учителей",
+        img: "/img/inst_01.png",
+        tag: "Инструкции",
+        text: "Минпросвещения и Рособрсоюз запустили Национальную электронную платформу педагогического образования (НЭППО), на которой учителя смогут пройти курсы повышения квалификации и научиться разрабатывать свои онлайн-курсы."
+        })
+      +article__prev({
+        title: "Открыт прием заявок на конкурс практик внутриклассного оценивания",
+        img: "/img/inst_02.png",
+        tag: "Инструкции",
+        text: "До 15 апреля 2019 можно подать заявку на конкурс «Практики внутриклассного оценивания-2019». Победители получат денежные гранты и возможность выступить с докладом на международном симпозиуме в Болгарии."
+        })
 
   // Список разделов
   section.section-list.container
