--- a/src/scss/front.sass
+++ b/src/scss/front.sass
@@ -18,7 +18,6 @@
         background-position: 100% 19%
       100%
         background-position: 0% 82%
-
   &__title
     +ff-roboto-bold
     font-size: 3.75em
@@ -32,10 +31,8 @@
     font-weight: 400
     line-height: 1.12em
     color: #fff
-
   &__statistic
     margin-top: 97px
-
   &__stat-item
     $indent: 44px
     $hb: 48px
@@ -68,7 +65,6 @@
         +sprite($percent)
         +leftcalc(29px, $hb)
         +topcalc(29px, $hb)
-
   &__info
     width: 100%
     padding-top: 33px
@@ -109,6 +105,7 @@
 
 // форма подписки
 .subscribe
+  width: 100%
   margin-bottom: 30px
   padding: 22px 26px
   border: 2px solid $accent
@@ -143,13 +140,52 @@
     +ff-arial
   &__btn
     margin: 0
+    padding: 9px 32px
     font-size: 1em
+    line-height: 1em
+
+// 1-я карточка-превью статьи
+.article-1st
+  margin-bottom: 30px
+  overflow: hidden
+  background-image: url("../img/article_photo.png")
+  background-repeat: no-repeat
+  background-clip: content-box
+  background-size: cover
+  &__wrap
+    display: flex
+    flex-direction: column
+    padding: 46px 100px 14px 40px
+    width: 100%
+    height: 100%
+    background: linear-gradient(to top, rgba(255, 255, 255, 0), $accent)
+  &__title
+    flex-grow: 0
+    margin: 0 0 30px 0
+    color: #fff
+    font-size: 2.25em
+  &__link
+    color: #fff
+    &:hover
+      color: #fff
+  &__text
+    flex-grow: 3
+    color: #fff
+  &__statistic
+    flex-grow: 0
+    .text-muted
+      span
+        color: #000
+        font-size: 1em
+
 
 //
 .article-prevs-block
   &__1st-line
     display: flex
+    flex-direction: row
     align-content: stretch
+    flex-wrap: wrap
     justify-content: stretch
 
 // карточки-превью статей
@@ -157,50 +193,29 @@
   margin-bottom: 30px
   position: relative
   align-self: stretch
-  // margin-top: 70px
-  &--main
-    overflow: hidden
   &__img-wrap
     display: block
     box-sizing: border-box
+    width: 100%
     margin-bottom: 30px
     height: 220px
     overflow: hidden
     img
-      object-fit: cover
+      width: 100%
+      height: auto
+      // object-fit: cover
+      // object-position: left top
     &:hover
-      img
-        transform: scale(1.1, 1.1) 1s ease
-        @keyframes zoomImg
-          // 0%
-          //   background-position: 0% 82%
-          // 50%
-          //   background-position: 100% 19%
-          // 100%
-            transform:
-
-  &__img-wrap--main
-    position: absolute
-    z-index: -5
-    // padding: 0 $pad
-    width: calc(100% - #{$pad})
-    height: 100%
-    top: 0
-    left: $pad
-    background: linear-gradient(0deg, rgba(255, 255, 255, 0), $accent)
-    // &::before
-    //   content: ''
-    //   display: block
-    //   position: absolute
-    //   z-index: 0
-    //   left: 0
-    //   top: 0
-    //   height: 0
-    //   width: calc(100% - #{$pad})
-    //   height: 100%
-    //   background: linear-gradient(0deg, rgba(255, 255, 255, 0), $accent)
-    // img
-    //   object-fit: cover
+      transform: scale(1.05, 1.05)
+  // &__img-wrap--main
+  //   position: absolute
+  //   z-index: -5
+  //   // padding: 0 $pad
+  //   width: calc(100% - #{$pad})
+  //   height: 100%
+  //   top: 0
+  //   left: $pad
+  //
   &__tag
     display: block
     text-decoration: none
@@ -208,8 +223,6 @@
     color: $lightgray
     font-size: 0.875em
     line-height: 1.285em
-    &--main
-      display: none
     &:hover
       color: $lightgray
     &:visited
@@ -223,16 +236,11 @@
     color: $headgray
     font-size: 1.125em
     line-height: 1.125em
-    &--main
-      color: #fff
-      z-index: 5
   &__text
     +ff-arial
     color: $textgray
     font-size: 0.875em
     line-height: 1.714em
-    &--main
-      color: #fff
   &__statistic
     border: none
     background: none
@@ -271,7 +279,7 @@
     line-height: 1.33em
     color: $accent
     &:hover
-        text-decoration: underline
+      text-decoration: underline
   &__all-articles-link
     margin: 0
     padding: 0 0 0 15px
