--- a/src/scss/front.sass
+++ b/src/scss/front.sass
@@ -2,6 +2,10 @@
 @import "spritePNG"
 @import "mixins/calc"
 
+.main
+  &--margin-top
+    margin-top: 40px
+
 // Главный баннер
 .main-banner
   margin-bottom: 70px
