--- a/src/scss/front.sass
+++ b/src/scss/front.sass
@@ -1,10 +1,8 @@
 @import "main"
 @import "spritePNG"
 @import "mixins/calc"
+@import "_page"
 
-.main
-  &--margin-top
-    margin-top: 40px
 
 // Главный баннер
 .main-banner
@@ -305,7 +303,7 @@
   padding-top: 30px
   padding-bottom: 46px
   background-color: #f3efe3
-  $day-width: 95px
+  $day-width: 115px
   &__title
     margin-bottom: 46px
     +ff-arial-bold
