--- a/src/pages/section.pug
+++ b/src/pages/section.pug
@@ -17,33 +17,32 @@ block content
           button.display-filter__item.display-filter__item--active по новизне
           button.display-filter__item по популярности
 
-
     .row
       +article__prev({
         title: "Яндекс.Учебники и РАО создадут хартию о цифровой образовательной среде",
         img: '/img/news_01.png',
         tag: "Новости",
         text: "Яндекс.Учебник и Российская академия образования совместно с учителями, родителями и экспертами разработают хартию о цифровой образовательной среде школы."
-        })
+        })(class = "article-prev--margin-bottom")
       +article__prev({
         title: "Главные новости цифрового образования",
         img: '/img/news_02.png',
         tag: "Новости",
         text: "В еженедельном дайджесте мы рассказываем о самом важном, что случилось с цифровым образованием в России и в мире за последнюю неделю."
-        })
+        })(class = "article-prev--margin-bottom")
       +article__prev({
         title: "10 тезисов книги «Другая школа»",
         img: '/img/news_03.png',
         tag: "Новости",
         text: "Современная школа больше не работает — с этих слов начинается книга Александра Мурашева «Другая школа»."
-        })
+        })(class = "article-prev--margin-bottom")
     .row
       +article__prev({
         title: "Запустилась бесплатная онлайн-платформа с курсами повышения квалификации для учителей",
         img: '/img/inst_01.png',
         tag: "Новости",
         text: "Минпросвещения и Рособрсоюз запустили Национальную электронную платформу педагогического образования (НЭППО), на которой учителя смогут пройти курсы повышения квалификации и научиться разрабатывать свои онлайн-курсы."
-        })
+        })(class = "article-prev--margin-bottom")
 
     +head-with-links("Список разделов")
   +section-list
