--- a/src/scss/_page.sass
+++ b/src/scss/_page.sass
@@ -7,6 +7,8 @@
 .page
   &__title
     align-self: baseline
+    margin-top: 50px
+    margin-bottom: 40px
     +ff-arial-bold
     font-size: 1.5em
     color: $accent
